# BrlCadGUI

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DisplayManager.cpp  DisplayManager.h  GeometryModel.cpp  GeometryModel.h  MainWindow.cpp  MainWindow.h  PlotGeometry.cpp  PlotGeometry.h  main.cpp  readme.txt
